<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title"
        android:textSize="26dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="18dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/samsung"
        />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_name"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        />

    <TextView
        android:id="@+id/text_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_price"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/imageView"
        />

    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:text="@string/phone_desc"
        android:layout_below="@id/text_name"
        />

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:layout_below="@id/text_desc"
        android:src="@drawable/ic_baseline_smartphone_24"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_alignBottom="@id/ic_phone"
        android:layout_below="@id/text_desc"
        android:layout_toEndOf="@id/ic_phone"
        android:text="@string/phone_memory"
        />

    <ImageView
        android:id="@+id/ic_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_phone"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:src="@drawable/ic_baseline_photo_camera_24"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ic_phone"
        android:layout_toEndOf="@id/ic_camera"
        android:layout_alignTop="@id/ic_camera"
        android:layout_alignBottom="@id/ic_camera"
        android:text="@string/phone_camera"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_bookmark_24"
        android:text="@string/bookmark"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>